--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,12 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+* {
+  font-family: "Manrope", sans-serif;
+  font-size: 28px;
+  font-weight: 800;
+  color: hsl(193deg, 38%, 86%);
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=style.css.map */
