--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -56,6 +56,6 @@ footer
   text-align: center
   font-size: 0.50em
   position: absolute
-  bottom: 0
+  bottom: 0px
   & a
     color: variables.$Neon-Green
