inactive footer temporarily

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -51,11 +51,11 @@ body
     &:hover
       @include mixins.neon-efect($color: variables.$Neon-Green )
 
-footer
-  width: 90%
-  text-align: center
-  font-size: 0.50em
-  position: absolute
-  bottom: 0px
-  & a
-    color: variables.$Neon-Green
+// footer
+//   width: 90%
+//   text-align: center
+//   font-size: 0.50em
+//   position: absolute
+//   bottom: 0px
+//   & a
+//     color: variables.$Neon-Green
