media queries to dividers app update

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,19 +44,36 @@ body {
   border: none;
 }
 .advice-button:hover {
+  cursor: pointer;
   box-shadow: 0 0 30px hsl(150deg, 100%, 66%);
   border: none;
 }
 
-footer {
-  width: 90%;
-  text-align: center;
-  font-size: 0.5em;
-  position: absolute;
-  bottom: 0px;
+.pattern-divider-desktop {
+  display: none;
 }
-footer a {
-  color: hsl(150deg, 100%, 66%);
+
+.pattern-divider-mobile {
+  display: none;
+}
+
+@media (min-width: 320px) {
+  .pattern-divider-mobile {
+    display: block;
+  }
+
+  .pattern-divider-desktop {
+    display: none;
+  }
+}
+@media (min-width: 545px) {
+  .pattern-divider-mobile {
+    display: none;
+  }
+
+  .pattern-divider-desktop {
+    display: block;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
