--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -35,10 +35,10 @@ body
   background: variables.$dark-grayish-Blue
 
 .advice
-  &-title, &-id 
+  &-title, &-id
     font-size: 0.5em
     padding: 5px
-    color : variables.$Neon-Green
+    color: variables.$Neon-Green
 
   &-button
     position: relative
@@ -49,7 +49,27 @@ body
     background: variables.$Neon-Green
     border: none
     &:hover
+      cursor: pointer
       @include mixins.neon-efect($color: variables.$Neon-Green )
+
+.pattern-divider-desktop
+  display: none
+.pattern-divider-mobile
+  display: none
+
+//media queries to dividers 
+
+@media (min-width: 320px)
+  .pattern-divider-mobile
+    display: block
+  .pattern-divider-desktop
+    display: none
+
+@media (min-width: 545px)
+  .pattern-divider-mobile
+    display: none
+  .pattern-divider-desktop
+    display: block
 
 // footer
 //   width: 90%
