--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -13,21 +13,22 @@
   background: variables.$dark-blue
   box-sizing: border-box
 
+//mobile
+
 body
   margin: 0
   width: 100vw
   height: 100vh
-  // display: flex
-  // flex-direction: column
-  // justify-content: center
-  // align-items: center
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
 
 .main
   margin: auto 10px
   text-align: center
   padding: 10px
   box-sizing: border-box
-  position: absolute
   border-radius: 10px
   top: 200px
   min-height: 200px
@@ -57,6 +58,18 @@ body
 .pattern-divider-mobile
   display: none
 
+
+// .footer
+//   margin: 0 auto
+//   width: 100%
+//   text-align: center
+//   font-size: 0.50em
+//   position: absolute
+//   bottom: 0
+//   padding-bottom: 10px 
+//   & a
+//     color: variables.$Neon-Green
+
 //media queries to dividers 
 
 @media (min-width: 320px)
@@ -71,11 +84,15 @@ body
   .pattern-divider-desktop
     display: block
 
-// footer
-//   width: 90%
-//   text-align: center
-//   font-size: 0.50em
-//   position: absolute
-//   bottom: 0px
-//   & a
-//     color: variables.$Neon-Green
+//desktop    
+
+@media (min-width: 1024px) 
+  .main
+    min-width: 500px
+    max-width: 500px
+
+
+  
+    
+
+
